# darknet-YOLOv4-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: all_src.txt  original.txt  specific.txt
config/: coco.data
src/: CMakeLists.txt  COMMANDS.txt  command_line.h  global_path.h  image.h  webcam.cpp  webcam.h
test/: README.md  darknet.cpp  main.cpp
weights/: README.md
