# Specify the minimum version of CMake required to process this file.
cmake_minimum_required(VERSION 3.1.5)

project(opencvtest VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 17)
include(CTest)
enable_testing()
set(OpenCV_DIR "C:/Libraries/OpenCV/build")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(webcam webcam.cpp)
target_link_libraries(webcam ${OpenCV_LIBS})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)